--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,9 @@
-@media (max-width: 767px) {
-    .container {
-        margin-top: 150px;
-    }
+
+
+.card-zoom {
+    transition: transform 0.2s;
 }
 
+.card-zoom:hover {
+    transform: scale(1.05);
+}
